--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/fs-extra": "^9.0.1",
+    "@types/jsdom": "^16.2.3",
+    "axios": "^0.19.2",
+    "fs-extra": "^9.0.1",
+    "jsdom": "^16.2.2",
+    "rxjs": "^6.5.5",
     "tslib": "~2.0.0"
   }
 }
