--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "importHelpers": true,
     "jsx": "react",
     "alwaysStrict": true,
+    "outDir": "./build",
     "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
