--- a/package.json
+++ b/package.json
@@ -31,12 +31,17 @@
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/cuid": "^1.3.1",
     "@types/date-fns": "^2.6.0",
     "@types/fs-extra": "^9.0.1",
+    "@types/glob": "^7.1.2",
     "@types/jsdom": "^16.2.3",
     "axios": "^0.19.2",
+    "cuid": "^2.1.8",
     "date-fns": "^2.14.0",
+    "fast-glob": "^3.2.4",
     "fs-extra": "^9.0.1",
+    "glob": "^7.1.6",
     "jsdom": "^16.2.2",
     "rxjs": "^6.5.5",
     "tslib": "~2.0.0"
